# PaperAPI.rs

./: .gitignore  Cargo.toml  README.md
src/: bin.rs
src/lib/: lib.rs  paper.rs  test.rs
