[package]
name = "paper_api"
version = "0.1.0"
authors = ["CoreyShupe <corey.shupe@superleague.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
clap = { version = "2.33.3", optional = true }
bytes = "0.5.6"
hyper = "0.13.9"
hyper-tls = "0.4.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "0.2.23", features = ["full"] }

[features]
binary-deps = ["clap"]

[lib]
name = "paper_api"
path = "src/lib/lib.rs"

[[bin]]
name = "paper_api_bin"
path = "src/bin.rs"
required-features = ["binary-deps"]